# vicis

./: Cargo.toml  Dockerfile_cov  README.md  run_kcov.sh
codegen/: Cargo.toml
codegen/examples/: compile.rs  example_x86_64.rs
codegen/src/: lib.rs
codegen/src/call_conv/: mod.rs
codegen/src/codegen/call_conv/: mod.rs
codegen/src/codegen/function/: mod.rs
codegen/src/codegen/function/basic_block/: mod.rs
codegen/src/codegen/function/instruction/: mod.rs
codegen/src/codegen/function/layout/: mod.rs
codegen/src/codegen/function/slot/: mod.rs
codegen/src/codegen/isa/: mod.rs
codegen/src/codegen/isa/x86_64/: mod.rs
codegen/src/codegen/lower/: mod.rs
codegen/src/codegen/module/: mod.rs
codegen/src/codegen/pass/: liveness.rs  regalloc.rs  spiller.rs
codegen/src/codegen/register/: mod.rs
codegen/src/function/: mod.rs
codegen/src/function/basic_block/: mod.rs
codegen/src/function/data/: mod.rs
codegen/src/function/instruction/: mod.rs
codegen/src/function/layout/: mod.rs
codegen/src/function/slot/: mod.rs
codegen/src/isa/: mod.rs
codegen/src/isa/aarch64/: asm.rs  instruction.rs  mod.rs  register.rs
codegen/src/isa/aarch64/lower/: mod.rs
codegen/src/isa/x86_64/: mod.rs
codegen/src/isa/x86_64/asm/: mod.rs
codegen/src/isa/x86_64/instruction/: mod.rs
codegen/src/isa/x86_64/lower/: load.rs  mod.rs  store.rs
codegen/src/isa/x86_64/pass/: eliminate_slot.rs  mod.rs  phi_elimination.rs  pro_epi_inserter.rs  simple_reg_coalescing.rs
codegen/src/isa/x86_64/register/: mod.rs
codegen/src/lower/: mod.rs
codegen/src/module/: mod.rs
codegen/src/pass/: liveness.rs  regalloc.rs  spiller.rs
codegen/src/register/: mod.rs
codegen/tests/: codegen.rs
codegen/tests/codegen/: addr.ll  addr.s  ary1.ll  ary5.s  condbr.ll  game_of_life.ll  global.ll  hello.ll  i8.ll  i8.s  i8_load_store.ll  spill.ll
codegen/tests/snapshots/: codegen__add.snap  codegen__addr.snap  codegen__ary2.snap  codegen__ary3.snap  codegen__ary4.snap  codegen__ary5.snap  codegen__br.snap  codegen__call1.snap  codegen__call2.snap  codegen__condbr.snap  codegen__exec_test-10.snap  codegen__exec_test-11.snap  codegen__exec_test-12.snap  codegen__exec_test-13.snap  codegen__exec_test-14.snap  codegen__exec_test-15.snap  codegen__exec_test-2.snap  codegen__exec_test-3.snap  codegen__exec_test-4.snap  codegen__exec_test-5.snap  codegen__exec_test-6.snap  codegen__exec_test-7.snap  codegen__exec_test-8.snap  codegen__exec_test-9.snap  codegen__exec_test.snap  codegen__fibo.snap  codegen__hello.snap  codegen__i8.snap  codegen__i8_load_store.snap  codegen__load_add.snap  codegen__phi.snap  codegen__phi2.snap  codegen__puts.snap  codegen__sum.snap  codegen__x86_64__add.snap  codegen__x86_64__addr.snap  codegen__x86_64__ary2.snap  codegen__x86_64__ary3.snap  codegen__x86_64__ary4.snap  codegen__x86_64__ary5.snap  (+16 more)
codegen_cranelift/: Cargo.toml
codegen_cranelift/examples/: clif_compile.rs
codegen_cranelift/src/: function.rs  instruction.rs  lib.rs  module.rs
codegen_cranelift/src/snapshots/: vicis_codegen_cranelift__function__test__compile_func.snap  vicis_codegen_cranelift__function__test__compile_func2.snap  vicis_codegen_cranelift__function__test__compile_func3.snap  vicis_codegen_cranelift__function__test__compile_func4.snap  vicis_codegen_cranelift__function__test__compile_func5.snap  vicis_codegen_cranelift__function__test__compile_func6.snap  vicis_codegen_cranelift__function__test__compile_func7.snap
core/: Cargo.toml
core/examples/: ary.ll  call.ll  cgep2.ll  hello.cc.ll  iterate.rs  parse.rs  phi_loop.ll
core/src/: lib.rs
core/src/ir/: mod.rs
core/src/ir/function/: builder.rs  mod.rs  parser.rs  print.rs
core/src/ir/function/basic_block/: mod.rs
core/src/ir/function/instruction/: builder.rs  display.rs  mod.rs  parser.rs  ty.rs
core/src/ir/function/layout/: mod.rs
core/src/ir/function/param_attrs/: mod.rs  parser.rs
core/src/ir/module/: mod.rs  parser.rs
core/src/ir/module/attributes/: mod.rs  parser.rs
core/src/ir/module/data_layout/: mod.rs
core/src/ir/module/global_variable/: mod.rs  parser.rs
core/src/ir/module/linkage/: mod.rs
core/src/ir/module/metadata/: mod.rs  parser.rs
core/src/ir/types/: mod.rs  parser.rs
core/src/ir/util/: mod.rs
core/src/ir/value/: arg.rs  consts.rs  mod.rs  parser.rs
core/src/parser/: mod.rs  parser.lalrpop  parser.rs
core/src/parser/assembly/: attributes.rs  function.rs  global_variable.rs  instruction.rs  linkage.rs  metadata.rs  mod.rs  module.rs  name.rs  param_attrs.rs  preemption_specifier.rs  types.rs  unnamed_addr.rs  util.rs  value.rs  visibility.rs
core/src/parser/bitcode/: README.md  mod.rs  module.rs
core/src/pass/: mod.rs
core/src/pass/transform/: mem2reg.rs  sccp.rs
core/src/traits/: basic_block.rs
core/tests/: build.rs  dom_tree.rs  mem2reg.rs
core/tests/snapshots/: build__build.snap  mem2reg__mem2reg_1.snap  mem2reg__mem2reg_2.snap  mem2reg__mem2reg_3.snap  mem2reg__mem2reg_4.snap  mem2reg__mem2reg_5.snap
examples/: ary.ll  (+21 more)
interpreter/: Cargo.toml  index.html
interpreter/examples/: interpreter.rs
interpreter/pkg/: .gitattributes  package.json  vicis_interpreter.d.ts  vicis_interpreter.js  vicis_interpreter_bg.wasm  vicis_interpreter_bg.wasm.d.ts
interpreter/src/: generic_value.rs  lib.rs
interpreter/src/interpreter/: frame.rs  mod.rs
interpreter/tests/: interpreter.rs
vicis_codegen/: Cargo.toml
vicis_codegen/src/: lib.rs
vicis_codegen/src/codegen/function/: mod.rs
vicis_codegen/src/codegen/isa/: mod.rs
vicis_codegen/src/codegen/lower/: mod.rs
vicis_codegen/src/codegen/module/: mod.rs
vicis_codegen/src/codegen/pass/: spiller.rs
vicis_codegen/src/codegen/register/: mod.rs
vicis_codegen/tests/: codegen.rs
vicis_codegen/tests/codegen/: ary1.s  ary2.ll  ary2.s  ary5.s  br.ll  condbr.s
(+272 files in other folders)
