[package]
name = "vicis"
version = "0.1.0"
authors = ["maekawatoshiki <konndennsa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "= 6.0.1"
rustc-hash = "= 1.1.0"
id-arena = "= 2.2.1"
either = "= 1.6.1"
