[package]
name = "vicis-core"
version = "0.2.0"
authors = ["uint256_t"]
edition = "2021"
license-file = "../LICENSE"
description = "Manipulate LLVM-IR in Pure Rust"
homepage = "https://github.com/maekawatoshiki/vicis"
documentation = "https://docs.rs/vicis-core"
repository = "https://github.com/maekawatoshiki/vicis"
readme = "../README.md"
keywords = ["llvm", "compiler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "^6.0.1"
rustc-hash = "^1.1.0"
id-arena = "^2.2.1"
anyhow = "^1.0.38"

[target.tarpaulin.dev-dependencies]
insta = { version = "^1.7.1", features = ["backtrace"] }

[dev-dependencies]
insta = "^1.7.1"
