[package]
name = "vicis_interpreter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vicis_core = { path = "../core" }
libffi = "^1.0.1"
libloading = "0.7.0"
rustc-hash = "^1.1.0"
id-arena = "^2.2.1"
anyhow = "^1.0.38"

[dev-dependencies]
vicis_interpreter = { path = "../interpreter" }
structopt = "0.3.18"
