[package]
name = "vicis_codegen"
version = "0.1.0"
authors = ["uint256_t <uint2p8_t@protonmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Manipulate LLVM-IR in Pure Rust"
homepage = "https://github.com/maekawatoshiki/vicis"
documentation = "https://docs.rs/vicis"
repository = "https://github.com/maekawatoshiki/vicis"
readme = "README.md"
keywords = ["llvm", "compiler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vicis_ir = { path = "../vicis_ir" }
rustc-hash = "= 1.1.0"
id-arena = "= 2.2.1"
anyhow = "= 1.0.38"

[dev-dependencies]
indicatif = "= 0.15.0"
